--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,6 +1,6 @@
 news:
 - type: "rss"
   url: "http://example.com/feed"
-  format: "&f[&6NEWS&f] {{title}} &7{{link}}"
+  format: "&f[&6NEWS&f] {{title}}"
   interval: 10
   count: 3
